BADURLS
Desc: nothing is clickable
Url: http://www.mvhs.de/contentserv/www.mvhs.de/index.php

Desc: forwards at web.de (only https, so leave for later)
Url: https://freemailng0408.web.de/jump.htm?goto=www.fifthplanet.net


ERROR JS error at http://www.onlamp.com/pub/a/python/2003/08/14/gvr_interview.html
ERROR SyntaxError: syntax error
</script>
^
